# secrag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
eval/: build_questions.py  plot_results.py  questions.jsonl  run_eval.py
frontend/: index.html
src/secrag/: __init__.py  api.py  chunk.py  config.py  embed.py  index.py  ingest.py  llm.py  rag.py
tests/: test_chunk.py  test_ingest.py
